### $Id: Makefile.am,v 1.3 1999/05/17 23:52:19 hp Exp $ ###

INCLUDES = -I$(top_srcdir)/src/util -I$(includedir)

lib_LTLIBRARIES = libgoose-linear.la

libgoose_linear_la_SOURCES = \
	gala.cpp 

libgoose_linearincludedir = $(includedir)/goose

libgoose_linearinclude_HEADERS = \
	gala.h 

libgoose_linear_la_LDFLAGS = -version-info $(GOOSE_CURRENT):$(GOOSE_REVISION):$(GOOSE_AGE)

### $Id: Makefile.am,v 1.3 1999/05/17 23:52:19 hp Exp $ ###